# example_model

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue.yaml
.github/workflows/: files.py  files.yaml  format.yaml  run_model.py  run_model.yaml
src/: 01_download_data.ipynb  02_create_base_model.ipynb  settings.py  utils_wells.py
