[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "PROJECT_NAME"
version = "0.0.0"

description = "PROJECT_DESCRIPTION"
readme = "README.md"
authors = [{ name = "YOUR NAME", email = "your.email@example.com" }]
requires-python = ">=3.10.0"                                              # define python version
dependencies = ["zlflodata @ git+https://github.com/ZLFLO/data.git@main"]

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[tool.uv]
prerelease = "allow"

[tool.ruff]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
show-fixes = true
fix = true
